--- a/Codigo/styles.css
+++ b/Codigo/styles.css
@@ -27,7 +27,7 @@ h1 {
   font-size: 150px;
   font-weight: 100;
   text-align: center;
-  color: #000000;
+  color: #fff3d9;
   margin-top: -10px;
   margin-bottom: 4px;
 }
