--- a/Cafes/Americano/styles.css
+++ b/Cafes/Americano/styles.css
@@ -509,3 +509,7 @@ hr {
 .input:checked + .boton .span {
   color: var(--font-color-light);
 }
+
+button, a {
+    -webkit-tap-highlight-color: transparent;
+}
