--- a/Cafes/Latte/styles.css
+++ b/Cafes/Latte/styles.css
@@ -510,3 +510,7 @@ background-color: var(--main-color);
 .input:checked + .boton .span {
 color: var(--font-color-light);
 }
+
+button, a {
+    -webkit-tap-highlight-color: transparent;
+}
